--- a/lavis/configs/models/blip2/blip2_pretrain.yaml
+++ b/lavis/configs/models/blip2/blip2_pretrain.yaml
@@ -7,7 +7,7 @@ model:
   arch: pretrain
   load_finetuned: False
 
-  pretrained: "https://storage.googleapis.com/sfr-vision-language-research/LAVIS/models/BLIP2/blip2_pretrained.pth"
+  pretrained: './cached_models/blip2_pretrained.pth' #"https://storage.googleapis.com/sfr-vision-language-research/LAVIS/models/BLIP2/blip2_pretrained.pth"
   finetuned: ""
 
   # vit encoder
